payment page works but is not pretty. more functions added, all have been tested.

--- a/templates/menuScreen.html
+++ b/templates/menuScreen.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <title>El Table Menu</title>
 <style>
 .filterDiv {
   float: left;
@@ -39,6 +41,7 @@
   color: white;
 }
 </style>
+</head>
 <body>
 
 <h2>El Table Menu Items</h2>
