added nav bar, index page, extended index

--- a/templates/payment_page.html
+++ b/templates/payment_page.html
@@ -1,66 +1,6 @@
 <!DOCTYPE html>
-<html lang="en-us">
-<head>
-    <meta charset='utf-8'>
-    <meta name=author content="Dee Dee Lennon-Jones">
-    <title>Make a payment</title>
-    <style>
-.accordion {
-  background-color: white;
-  color: grey;
-  cursor: pointer;
-  padding: 18px;
-  margin-left:1em;
-  margin-right:1em;
-  width: 80%;
-  border: 5px solid pink;
-  text-align: left;
-  outline: none;
-  font-size: 15px;
-  transition: 0.4s;
-}
-
-
-.panel {
-  margin-left:1em;
-  margin-right:1em;
-  width: 80%;
-  text-align: center;
-  background-color: lavender;
-  max-height: 0;
-  overflow: hidden;
-  transition: max-height 0.2s ease-out;
-}
-
-.center {
-  margin: auto;
-  width: 50%;
-  padding: 10px;
-}
-
-th {
-  text-align: right;
-  margin-left: 1em;
-  margin-right: 1em;
-  padding-left: 50px;
-  padding-right: 20px;
-}
-
-td {
-  text-align: right;
-  margin: 1em;
-  padding-left: 50px;
-  padding-right: 20px;
-}
-
-#messages { color: red; font-weight: bold; }
-
-
-</style>
-</head>
-
-<body>
-    
+{% extends "index.html" %}
+{% block content %}
     <h1>
         Make a payment
     </h1>
@@ -77,7 +17,7 @@ td {
     {% if msg %}
     <p>{{msg}}</p>
     {% endif %}
-    
+    <!-- how do you feed the info to the route? it works but im so confused how -->
     <form method="POST" action="">
     <p><label for="amount">Amount</label>
         <input type="text" id="amount" name="amount">
@@ -100,4 +40,4 @@ td {
     {% endif %}
 </form>
     
-</body>
+{% endblock %}
