--- a/templates/recent_orders.html
+++ b/templates/recent_orders.html
@@ -1,66 +1,15 @@
 <!DOCTYPE html>
-<html>
-<head>
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<style>
-.accordion {
-  background-color: white;
-  color: grey;
-  cursor: pointer;
-  padding: 18px;
-  margin-left:1em;
-  margin-right:1em;
-  width: 80%;
-  border: 5px solid pink;
-  text-align: left;
-  outline: none;
-  font-size: 15px;
-  transition: 0.4s;
-}
+{% extends "index.html" %}
 
+{% block content %}
 
-.panel {
-  margin-left:1em;
-  margin-right:1em;
-  width: 80%;
-  text-align: center;
-  background-color: lavender;
-  max-height: 0;
-  overflow: hidden;
-  transition: max-height 0.2s ease-out;
-}
-
-.center {
-  margin: auto;
-  width: 50%;
-  padding: 10px;
-}
-
-th {
-  text-align: right;
-  margin-left: 1em;
-  margin-right: 1em;
-  padding-left: 50px;
-  padding-right: 20px;
-}
-
-td {
-  text-align: right;
-  margin: 1em;
-  padding-left: 50px;
-  padding-right: 20px;
-}
-
-
-</style>
-</head>
-<body>
-<section class="center">
-
+<div class="main">
 <h1>{{user.username}}'s Tab Balance: {{user.balanceOwed}}</h1> 
 
 <h2>Recent Orders</h2>
-<p >Click on the order to see details</p>
+<p>Click on the order to see details</p>
+</div>
+<div class="center">
 {% for order in orders %}
 <button class="accordion">
     <table>
@@ -89,9 +38,7 @@ td {
 </div>
     
 {% endfor %}
-
-</section>
-
+</div>
 <script>
 var acc = document.getElementsByClassName("accordion");
 var i;
@@ -109,5 +56,4 @@ for (i = 0; i < acc.length; i++) {
 }
 </script>
 
-</body>
-</html>
+{% endblock %}
