--- a/templates/recent_orders.html
+++ b/templates/recent_orders.html
@@ -7,7 +7,8 @@
 <h1>{{user.username}}'s Tab Balance: {{user.balanceOwed}}</h1> 
 
 <h2>Recent Orders</h2>
-<p>Click on the order to see details</p>
+<p>Click on the order to see details.</p>
+<p><a href="{{url_for('payment', username=user.username)}}">Click here to make a payment and to view recent payments.</a></p>
 </div>
 <div class="center">
 {% for order in orders %}
