added links & extended template to user tabs

--- a/templates/index.html
+++ b/templates/index.html
@@ -6,10 +6,11 @@
     </head>
   {% endblock %}
     <body>
-        <ul>
-          <li><a href="{{url_for('recent_orders',username="hlotfy")}}">Recent Orders</a></li>
-          <li><a href="{{url_for('payment',username="hlotfy")}}">Payment</a></li>
-          <li><a href="{{url_for('order')}}">Menu</a></li>
+        <ul id="mbar">
+          <li id="lmbar"><a href="{{url_for('recent_orders',username="hlotfy")}}">Recent Orders</a></li>
+          <li id="lmbar"><a href="{{url_for('payment',username="hlotfy")}}">Payment</a></li>
+          <li id="lmbar"><a href="{{url_for('order')}}">Menu</a></li>
+          <li id="lmbar"><a href="{{url_for('tabs')}}">User Tabs</a></li>
         </ul>
         
         <div id="content", align="center">
