--- a/templates/userTabs.html
+++ b/templates/userTabs.html
@@ -1,68 +1,31 @@
 <!DOCTYPE html>
-<html>
-<head>
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<style>
-* {
-  box-sizing: border-box;
-}
+{% extends "index.html" %}
 
-#myInput {
-  background-image: url('/css/searchicon.png');
-  background-position: 10px 12px;
-  background-repeat: no-repeat;
-  width: 100%;
-  font-size: 16px;
-  padding: 12px 20px 12px 40px;
-  border: 1px solid #ddd;
-  margin-bottom: 12px;
-}
-
-#myUL {
-  list-style-type: none;
-  padding: 0;
-  margin: 0;
-}
-
-#myUL li a {
-  border: 1px solid #ddd;
-  margin-top: -1px; /* Prevent double borders */
-  background-color: #f6f6f6;
-  padding: 12px;
-  text-decoration: none;
-  font-size: 18px;
-  color: black;
-  display: block
-}
-
-#myUL li a:hover:not(.header) {
-  background-color: #eee;
-}
-</style>
-</head>
-<body>
-
-<h2>Search User Tabs</h2>
-
+{% block content %}
+<h1>Search User Tabs</h1>
+<div class='main'>
 <input type="text" id="myInput" onkeyup="myFunction()" placeholder="Search for username" title="Type in a username">
 
-{% for user in users %}
 <ul id="myUL">
-  <li><a href="#">{{user.username}}</a></li>
-</ul>
+{% for user in users %}
+
+  <li><a href="{{url_for('recent_orders', username=user.username)}}">{{user.username}}</a></li>
+
 {% endfor %}
+</ul>
+</div>
 
 <script>
 function myFunction() {
     var input, filter, ul, li, a, i, txtValue;
     input = document.getElementById("myInput");
-    filter = input.value.toUpperCase();
+    filter = input.value.toLowerCase();
     ul = document.getElementById("myUL");
     li = ul.getElementsByTagName("li");
     for (i = 0; i < li.length; i++) {
         a = li[i].getElementsByTagName("a")[0];
         txtValue = a.textContent || a.innerText;
-        if (txtValue.toUpperCase().indexOf(filter) > -1) {
+        if (txtValue.indexOf(filter) > -1) {
             li[i].style.display = "";
         } else {
             li[i].style.display = "none";
@@ -71,5 +34,4 @@ function myFunction() {
 }
 </script>
 
-</body>
-</html>
+{% endblock %}
