added some functionality to shopping cart

--- a/templates/index.html
+++ b/templates/index.html
@@ -11,6 +11,7 @@
           <li id="lmbar"><a href="{{url_for('payment',username="hlotfy")}}">Payment</a></li>
           <li id="lmbar"><a href="{{url_for('order')}}">Menu</a></li>
           <li id="lmbar"><a href="{{url_for('tabs')}}">User Tabs</a></li>
+          <li id="lmbar"><a href="{{url_for('cart', username='hlotfy')}}">Cart</a></li>
         </ul>
         
         <div id="content", align="center">
