--- a/templates/shopping-cart-example.html
+++ b/templates/shopping-cart-example.html
@@ -115,11 +115,11 @@
         Total Price: (Price total goes here)
       </div>
       
-      <form method=post action="/clearCart">  <!--need to link clearCart function here, which still needs to be written!! -->
+      <form method=post action="/clearCart/">  <!--need to link clearCart function here, which still needs to be written!! -->
         <input type=submit name=submit value="Clear Cart">
       </form>  
       
-       <form method=post action="/addToTab">  <!--need to link addToTab function here, which still needs to be written!! -->
+       <form method=post action="/addToTab/">  <!--need to link addToTab function here, which still needs to be written!! -->
         <input type=submit name=submit value="Add to tab">
       </form>    
     </div>
