--- a/templates/order_form.html
+++ b/templates/order_form.html
@@ -1,55 +1,13 @@
 <!DOCTYPE html>
-<html>
-<head>
+
 {% extends "index.html" %}
-<style>
-.filterDiv {
-  float: left;
-  background-color: #2196F3;
-  color: #ffffff;
-  width: 100px;
-  line-height: 100px;
-  text-align: center;
-  margin: 2px;
-  display: none;
-}
 
-.show {
-  display: block;
-}
-
-.container {
-  margin-top: 20px;
-  overflow: hidden;
-}
-
-/* Style the buttons */
-.btn {
-  border: none;
-  outline: none;
-  padding: 12px 16px;
-  background-color: #f1f1f1;
-  cursor: pointer;
-}
-
-.btn:hover {
-  background-color: #ddd;
-}
-
-.btn.active {
-  background-color: #666;
-  color: white;
-}
-</style>
-</head>
-<body>
   {% block content %}
   <h1>El Table Menu Items</h1>
   <p><strong>Please Select 1 or More Menu Items to Add to Order</strong></p>
   <div class="main">
     <div class="container">
-      <!--<form action="/hlotfy/recent_orders/" method="POST">--> <!--moving this to cart!-->
-      <form action="{{url_for('cart', username=username)}}" method="POST">  
+      <form action="{{url_for('cart')}}" method='POST'>  
           {% for item in items %}
             {% if item.kind == "sandwich" %}
               <div class="filterDiv sandwiches">
@@ -69,10 +27,8 @@
               </div>
             {% endif %}
           {% endfor %}
-          <br><input type="submit" value="Add to Cart">
+          <br><button type="submit">Add To Cart!</button>
       </form>
     </div>
   </div>
   {% endblock %}
-</body>
-</html>
