--- a/templates/shopping_cart_page.html
+++ b/templates/shopping_cart_page.html
@@ -4,11 +4,11 @@
     <h1>
         Shopping Cart
     </h1>
-  <form action="{{url_for('recent_orders', username=user.username)}}" method="POST">
+  <form action="{{url_for('recent_orders', username=session['username'])}}" method="POST">
     <div class="shopping-cart">
       <!-- Title -->
       <div class="title">
-        {{user.username}}'s Shopping Bag
+        {{session['username']}}'s Shopping Bag
       </div>
   
     {% for item in items %}
@@ -60,7 +60,7 @@
             
    
    
-    <input type="submit" value="Place Order"> <!--should 'place order' and add order info to recent orders page-->
+    <button type="submit">Place Order!</button> <!--should 'place order' and add order info to recent orders page-->
     </form>
 
       <!-- Product #1 -->
