--- a/static/style.css
+++ b/static/style.css
@@ -1,4 +1,7 @@
-body {margin:0;}
+body {
+  margin:0;
+  font-family: monospace;
+}
 
 #mbar {
   list-style-type: none;
@@ -32,13 +35,13 @@ li a:hover:not(.active) {
 }
 
 .btn-group button {
-  background-color: #F4D1FF; /* Green background */
-  border: 1px solid #DCDCDC; /* Green border */
-  color: brown; /* White text */
-  padding: 10px 24px; /* Some padding */
-  cursor: pointer; /* Pointer/hand icon */
-  width: 50%; /* Set a width if needed */
-  display: block; /* Make the buttons appear below each other */
+  background-color: #F4D1FF; 
+  border: 1px solid #DCDCDC; 
+  color: brown; 
+  padding: 10px 24px; 
+  cursor: pointer; 
+  width: 50%; 
+  display: block; 
 }
 
 .btn-group button:not(:last-child) {
